Escape debug stack content

--- a/Resources/views/Collector/api.html.twig
+++ b/Resources/views/Collector/api.html.twig
@@ -72,7 +72,7 @@
         </ul>
     {% endif %}
 
-    <script type="text/javascript">//<![CDATA[
+    <script type="text/javascript">
         function expandQuery(link) {
             var sections = link.children,
                 target = link.getAttribute('data-target-id'),
@@ -91,5 +91,5 @@
 
             return false;
         }
-    //]]></script>
+    </script>
 {% endblock %}
