Let escape the api response content

--- a/Resources/views/Collector/api.html.twig
+++ b/Resources/views/Collector/api.html.twig
@@ -57,7 +57,7 @@
                         <label>Header:</label>
                         <p style="margin-bottom: 4px; padding: 3px; font-size:10px;">{{ query.responseHeaders|raw }}</p>
                         <label>Content:</label>
-                        <p style="margin-bottom: 4px; padding: 3px; font-size:10px;">{{ query.responseContent|raw }}</p>
+                        <p style="margin-bottom: 4px; padding: 3px; font-size:10px;">{{ query.responseContent }}</p>
                     </div>
                     <small>
                         <strong>Request Headers</strong>: {{ query.requestHeaders }}<br />
